fixed contact section on mobile view

--- a/style.css
+++ b/style.css
@@ -354,8 +354,11 @@ form .btn2 {
     margin-top: 20px;
     cursor: pointer;
 }
+
+/* -----Footer----- */
 .copyright {
     display: flex;
+    width: 100vw;
     padding: 25px 0;
     background-color: #262626;
     justify-content: center;
@@ -507,6 +510,9 @@ nav .fas {
     .tab-links {
         font-size: 15px;
         margin-right: 20px;
+    }
+    .contact-container {
+        margin-left: 30px;
     }
     .contact-left,
     .contact-right {
